--- a/assets/sass/utilities/_margin.scss
+++ b/assets/sass/utilities/_margin.scss
@@ -26,7 +26,7 @@
 		margin-left: 1rem;
 	}
 
-	.googlesitekit-margin-right-auto {
-		margin-right: auto;
+	.googlesitekit-margin-left-auto {
+		margin-left: auto;
 	}
 }
